# streamvbyte

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README.md  example.c
.github/workflows/: codeql.yml  macos.yml  ubuntu.yml  ubuntu20.yml  ubuntu22.yml  vs.yml  vs16.yml
examples/: example.c
include/: streamvbyte.h  streamvbyte_zigzag.h  streamvbytedelta.h
src/: encode_poc.c  neon_poc.c  streamvbyte.c  streamvbyte_0124.c  streamvbyte_0124_decode.c  streamvbyte_0124_encode.c  streamvbyte_arm_decode.c  streamvbyte_arm_encode.c  streamvbyte_decode.c  streamvbyte_encode.c  streamvbyte_isadetection.h  streamvbyte_shuffle_tables.h  streamvbyte_shuffle_tables_0124.h  streamvbyte_shuffle_tables_0124_decode.h  streamvbyte_shuffle_tables_0124_encode.h  streamvbyte_shuffle_tables_decode.h  streamvbyte_shuffle_tables_encode.h  streamvbyte_x64_decode.c  streamvbyte_x64_encode.c  streamvbyte_zigzag.c  streamvbytedelta.c  streamvbytedelta_decode.c  streamvbytedelta_encode.c  streamvbytedelta_x64_decode.c  streamvbytedelta_x64_encode.c
tests/: decode_perf.c  perf.c  unit.c  writeseq.c
utils/: shuffle_tables.c
